# easyMAC

./: .gitignore  CMakeLists.txt  README.md  Readme.md  Readme.txt  executive.sln
executive/: Interpreter.l  Interpreter.y  ReadMe.txt  Winsocket.cpp  Winsocket.h  atomic_actions.cpp  atomic_actions.h  atomic_actions_defs.h  block_vector.h  buffer.cpp  buffer.h  camara.h  display.cpp  display.h  exe.tab.cpp  exe.tab.hpp  executive.cpp  executive.h  executive.vcxproj  executive.vcxproj.filters  executive_defs.h  exeparser.cpp  exeparser.h  exeparser.l  exeparser.y  exeparser_defs.h  h_variables.h  h_variables_defs.h  interpolator.cpp  interpolator.h  interpolator_parameters.h  interpreter.cpp  interpreter.h  interpreter_defs.h  lex.exe.c  lex.exe.cpp  lex.yy.c  lex.yy.cpp  machine_vector.h  machine_vector_defs.h  (+23 more)
executive/res/executive/: easyMAC.aps  easyMAC.pptx  easyMAC.rc  easyMACicon.pptx
executive/res/executive/config/: easyMAC.ini  easyMAC.txt  help.txt  help_cloudnc.txt  help_g.txt  help_h.txt  help_start.txt
executive/res/interpreter/programs/: test0.nc  test1.nc  test10.nc  test2.nc  test3.nc  test4.nc  test5.nc  test6.nc  test7.nc  test8.nc  test9.nc
executive/res/virtualMachine/: 3AxisMill.smd  Base.txt  HeadMain.txt  Shader.fs  Shader.vs  TextureShader.fs  TextureShader.vs  basicShader.fs  basicShader.vs  column.txt  headSlide.txt  monkey3.txt  saddle.txt  table.txt  test.smd  virtualMAC.txt
version_uptdates/: Executive_Release_11_1_2017.txt  executive_todo_3_1_2017.txt  executive_todo_4_7_2017.txt
